# shardcfo-app

./: .vercelignore  ShardCFO_Pitch_Deck_with_Pipeline.pptx  next.config.ts  package-lock.json  package.json  vercel.json
api/: qbo.py  requirements.txt
prompts/: scf-deep-research.md
public/templates/: FORMAT.xlsx
qbo-parser/: pyproject.toml
qbo-parser/examples/: parse_report.py
qbo-parser/qbo_parser/: __init__.py  api.py  cli.py  detector.py  models.py  normalizer.py  parser.py  utils.py  validator.py
qbo-parser/tests/: test_api.py  test_cli.py  test_detector.py  test_fixtures.py  test_init.py  test_multiperiod.py  test_normalizer.py  test_parser.py  test_validator.py
qbo-parser/tests/fixtures/: generate_sample_bs.py  generate_sample_pl.py  generate_sample_pl_monthly.py  generate_sample_scf.py  sample_bs.xlsx  sample_pl.xlsx  sample_pl_monthly.xlsx  sample_pnl.xlsx  sample_scf.xlsx
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(dashboard)/: layout.tsx  page-client.tsx  page.tsx
src/app/dashboard/: actions.ts  layout.tsx  page-client.tsx  page.tsx  recent-files.tsx
src/app/privacy/: page.tsx
src/app/terms/: page.tsx
src/components/: audit-score-badge.tsx
src/components/board-deck/: deck-editor.tsx  (+3 more)
src/lib/: constants.ts  date-utils.ts  utils.ts  validations.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20240101000000_initial_schema.sql  20240102000000_seed_demo_data.sql  20240201000000_diligence_schema.sql  20240301000001_company_files.sql  20240401000000_research_sessions.sql
(+200 files in other folders)
